# wyred-audit

./: CLAUDE.md  README.md  pyproject.toml
docs/: cli.md  finding-codes.md  index.md
src/wyred_audit/: __init__.py  __main__.py  baselines.py  cli.py  connlock.py  contractlib.py  crosscheckrun.py  harnesslib.py  incumbency.py  rebuild.py  schema_stage.py
tests/: make_fixtures.py  run_fixture_tests.py
tests/fixtures/: README.md
tests/fixtures/tampered/bom_totals_edit/: watchy_v1_reva.bom.json
tests/fixtures/tampered/bom_value_swap/: watchy_v1_reva.bom.json
tests/fixtures/tampered/connlock_ok_flip/: watchy_v1_reva.connlock.json
tests/fixtures/tampered/lifecycle_ok_flip/: watchy_v1_revb.lifecycle.json
tests/fixtures/tampered/locked_row_edit/: watchy_v1_reva.l1.json
tests/fixtures/tampered/pinmapdiff_blanked/: watchy_v1_draft_btn3.pinmapdiff.json
tests/fixtures/tampered/schema_bom_missing_qty/: watchy_v1_reva.bom.json
tests/fixtures/tampered/schema_pinmap_net_number/: watchy_v1_reva.pinmap.json
tests/fixtures/tampered/series_hand_edit/: watchy_v1_reva.l1.json
tests/fixtures/tampered/sticky_alloc_moved/: watchy_v1_draft_btn3.alloc.json
